chat-room joining form ready and mapped with backend

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 /* Firefox */
 * {
-  scrollbar-width: thin;
+  scrollbar-width: none;
   scrollbar-color: var(--secondary) var(--scrollbarBg);
 }
 
